# C-projects

./: Gurobi-PCA.cpp
Multithreading_DynamicProgramming/: Project1.sln  conclusion.ipynb  plotPY.py
Multithreading_DynamicProgramming/Debug/: Project1.ilk  dataresult_T.csv  dataresult_alpha.csv  dataresult_p.csv  dataresult_pi.csv  dataresult_rho.csv  tradedata.txt  tradedata_T.txt  tradedata_alpha.txt  tradedata_p.txt  tradedata_pi.txt  tradedata_rho.txt
Multithreading_DynamicProgramming/Project1/: Project1.vcxproj  Project1.vcxproj.filters  baggie.cpp  baggie.h  mytimer.cpp  trademain.cpp
Multithreading_DynamicProgramming/Project1/Debug/: Project1.pch  vc141.idb
Multithreading_DynamicProgramming/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PCA&DLL_in_EXCEL/: dump2.xlsm
PCA&DLL_in_EXCEL/test_dll/: test_dll.VC.db  test_dll.sln
PCA&DLL_in_EXCEL/test_dll/Debug/: test_dll.exp  test_dll.ilk  test_dll.lib
PCA&DLL_in_EXCEL/test_dll/test_dll/: test.cpp  test.def  test_dll.vcxproj  test_dll.vcxproj.filters
PCA&DLL_in_EXCEL/test_dll/test_dll/Debug/: vc140.idb
PCA&DLL_in_EXCEL/test_dll/test_dll/Debug/test_dll.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_dll.lastbuildstate  test_dll.write.1u.tlog
PCA&DLL_in_EXCEL/test_dll/test_dll/x64/Debug/: vc140.idb
PCA&DLL_in_EXCEL/test_dll/x64/Debug/: test_dll.exp  test_dll.ilk  test_dll.lib
PCA&MeanVariance/: CMakeLists.txt  extra.cpp  main.cpp  russell_1000_closing_clean.csv
QP_realization/: HW3 Description  hw3_1.py  hw3_2.cpp
QP_realization/README/: README.txt
clion0/: CMakeLists.txt  main.cpp
gurobitest/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  main.cpp
hw5_a/: CMakeLists.txt  main.cpp
hw5a/: CMakeLists.txt  main.cpp
hw5e/: CMakeLists.txt  main.cpp
readfile_test/: CMakeLists.txt  main.cpp
review_C/: C_01  C_01.c
test01/test01/: main  main.cpp
test01/test01.xcodeproj/: project.pbxproj
test01/test01.xcodeproj/project.xcworkspace/xcuserdata/wrk.xcuserdatad/: UserInterfaceState.xcuserstate
test01/test01.xcodeproj/xcuserdata/wrk.xcuserdatad/xcschemes/: test01.xcscheme  xcschememanagement.plist
testC01/testC01/: a.out  main  main.c
testC01/testC01.xcodeproj/: project.pbxproj
testC01/testC01.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
testC01/testC01.xcodeproj/project.xcworkspace/xcuserdata/wrk.xcuserdatad/: UserInterfaceState.xcuserstate
testC01/testC01.xcodeproj/xcuserdata/wrk.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
testC01/testC01.xcodeproj/xcuserdata/wrk.xcuserdatad/xcschemes/: testC01.xcscheme  (+1 more)
testmean/: CMakeLists.txt  main.cpp
(+8 files in other folders)
